--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/vercel": "^3.3.0",
     "@spearly/sdk-js": "^1.1.1",
     "astro": "^2.4.1"
   }
